--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "google-cloud-storage>=3.7.0",
     "hypertune>=1.2.1",
     "python-dotenv>=1.2.1",
+    "rfdetr>=1.3.0",
     "setuptools>=80.9.0",
 ]
